tomcat: rm deprecated options
Former-commit-id: 2e5ba49cdbd90d196ef263aa7d2ee04f2fb8f0b3